--- a/index.html
+++ b/index.html
@@ -68,6 +68,8 @@
         <link rel="stylesheet" href="user_css/main.css">
     </head>
     <body>
+        <h3>Download BIOS File:</h3>
+        <a href = "bios/gba_bios.bin" download = "gba bios"></a>
         <div id="container">
             <div id="menu" class="paused">
                 <ul class="menu" id="menu_top">
