Make bios download in saves tab (change to file later

--- a/index.html
+++ b/index.html
@@ -68,8 +68,6 @@
         <link rel="stylesheet" href="user_css/main.css">
     </head>
     <body>
-        <h3>Download BIOS File:</h3>
-        <a href = "bios/gba_bios.bin" download = "gba bios"></a>
         <div id="container">
             <div id="menu" class="paused">
                 <ul class="menu" id="menu_top">
@@ -192,6 +190,10 @@
                             </li>
                             <li>
                                 <a href="./" id="export" target="_new">Export All Saves</a>
+                            </li>
+
+                            <li>
+                                <a href = "bios/gba_bios.bin" download = "gba bios">Download Bi</a>
                             </li>
                         </ul>
                     </li>
