make bios file actually a file

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                             </li>
 
                             <li>
-                                <a href = "bios/gba_bios.bin" download = "gba bios">Download Bi</a>
+                                <a href = "bios/gba_bios.bin" download = "gbabios.bin">Download Bi</a>
                             </li>
                         </ul>
                     </li>
