added download button

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                             </li>
 
                             <li>
-                                <a href = "bios/gba_bios.bin" download = "gbabios.bin">Download Bi</a>
+                                <a href = "bios/gba_bios.bin" download = "gbabios.bin">Download Bios</a>
                             </li>
                         </ul>
                     </li>
@@ -231,5 +231,13 @@
             </div>
             <span class="message" id="tempMessage"></span>
         </div>
+
+        <!-- Install button, hidden by default -->
+        <div id="installContainer" class="hidden">
+            <button id="butInstall" type="button">Install</button>
+        </div>
+
+        <script src="/script.js" defer></script>
+
     </body>
 </html>
