Added downloads tab and game download options

--- a/index.html
+++ b/index.html
@@ -93,6 +93,18 @@
                     <li id="play" class="show">Play</li>
                     <li id="pause" class="hide">Pause</li>
                     <li id="restart">Restart</li>
+                    <li id="saves_menu">
+                        Games and Bios
+                        <ul id="games_menu_container">
+                            <li>
+                                <a href = "bios/gba_bios.bin" download = "gbabios.bin">Download Bios</a>
+                            </li>
+
+                            <li>
+                                <a href = "games/pokemonemerald" download = "pokemonemerald.gba">Download Pokemon-Emerald</a>
+                            </li>
+                        </ul>
+                    </li>
                     <li>
                         Settings
                         <ul>
