Fixed missing.gba and removed bios download from saves

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                             </li>
 
                             <li>
-                                <a href = "games/pokemonemerald" download = "pokemonemerald.gba">Download Pokemon-Emerald</a>
+                                <a href = "games/pokemonemerald.gba" download = "pokemonemerald.gba">Download Pokemon-Emerald</a>
                             </li>
                         </ul>
                     </li>
