added new games + new theme color

--- a/index.html
+++ b/index.html
@@ -103,6 +103,18 @@
                             <li>
                                 <a href = "games/pokemonemerald.gba" download = "pokemonemerald.gba">Download Pokemon-Emerald</a>
                             </li>
+
+                            <li>
+                                <a href = "games/pokemonfirered.gba" download = "pokemonfirered.gba">Download Pokemon-Emerald</a>
+                            </li>
+
+                            <li>
+                                <a href = "games/loztheminishcap.gba" download = "loztheminishcap.gba">Download Pokemon-Emerald</a>
+                            </li>
+
+                            <li>
+                                <a href = "games/mariokartsupercircuit.gba" download = "mariokartsupercircuit.gba">Download Pokemon-Emerald</a>
+                            </li>
                         </ul>
                     </li>
                     <li>
