Add theme tab and theme options
Added the theme tab and the dark, light, and pink theme options. Commit also fixes the game download only showing pokemon emerald error

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
         <script src="user_scripts/XAudioJS/swfobject.js"></script>
         <script src="user_scripts/XAudioJS/resampler.js"></script>
         <script src="user_scripts/XAudioJS/XAudioServer.js"></script>
+        <script src="misc_scripts/menutheme.js"></script>
         <link rel="stylesheet" href="user_css/main.css">
     </head>
     <body>
@@ -105,15 +106,15 @@
                             </li>
 
                             <li>
-                                <a href = "games/pokemonfirered.gba" download = "pokemonfirered.gba">Download Pokemon-Emerald</a>
+                                <a href = "games/pokemonfirered.gba" download = "pokemonfirered.gba">Download Pokemon-FireRed</a>
                             </li>
 
                             <li>
-                                <a href = "games/loztheminishcap.gba" download = "loztheminishcap.gba">Download Pokemon-Emerald</a>
+                                <a href = "games/loztheminishcap.gba" download = "loztheminishcap.gba">Download Legend of Zelda-The Minish Cap</a>
                             </li>
 
                             <li>
-                                <a href = "games/mariokartsupercircuit.gba" download = "mariokartsupercircuit.gba">Download Pokemon-Emerald</a>
+                                <a href = "games/mariokartsupercircuit.gba" download = "mariokartsupercircuit.gba">Download Mario Kart-Super Circuit</a>
                             </li>
                         </ul>
                     </li>
@@ -227,6 +228,14 @@
                             <li>
                                 <a href="./" id="export" target="_new">Export All Saves</a>
                             </li>
+                        </ul>
+                    </li>
+                    <li id="theme_menu">
+                        Theme
+                        <ul>
+                            <li id="dark_theme">Dark</li>
+                            <li id="light_theme">Light</li>
+                            <li id="pink_theme">Pink</li>
                         </ul>
                     </li>
                     <li id="fullscreen">Fullscreen</li>
