--- a/index.html
+++ b/index.html
@@ -230,14 +230,14 @@
                             </li>
                         </ul>
                     </li>
-                    <li id="theme_menu">
+                    <!--<li id="theme_menu">
                         Theme
                         <ul>
                             <li id="dark_theme">Dark</li>
                             <li id="light_theme">Light</li>
                             <li id="pink_theme">Pink</li>
                         </ul>
-                    </li>
+                    </li>-->
                     <li id="fullscreen">Fullscreen</li>
                     <li>
                         <span id="speed">Speed</span>
