Add bios as file ref instead of user input

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
         <script src="user_scripts/XAudioJS/swfobject.js"></script>
         <script src="user_scripts/XAudioJS/resampler.js"></script>
         <script src="user_scripts/XAudioJS/XAudioServer.js"></script>
+        <file src="bios/gba_bios.bin" id="bios_load"></file>
         <script src="misc_scripts/menutheme.js"></script>
         <link rel="stylesheet" href="user_css/main.css">
     </head>
